// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadMobile DOM rendering renders correctly when collapsable 1`] = `
<thead
  onClick={[Function]}
>
  <tr
    className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row mobile-row-non-collapsable"
  >
    <th
      className="title"
      colSpan="2"
    >
      Test title
    </th>
    <th
      className="column-picker"
      colSpan={2}
    >
      <div
        className="general"
      >
        <button
          className="KambiWidget-card-support-text-color button"
          onClick={[Function]}
        >
          Translated: "Column group 1"
          <i />
        </button>
      </div>
    </th>
    <th
      className="margin"
    />
  </tr>
  <tr
    className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color general general-non-collapsable"
  >
    <th
      className="title"
      colSpan="2"
    >
      
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 1-1\\""
    >
      c11
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 1-2\\""
    >
      c12
    </th>
    <th
      className="margin"
    />
  </tr>
</thead>
`;

exports[`TableHeadMobile DOM rendering renders correctly when in hidden mode 1`] = `
<thead
  onClick={[Function]}
>
  <tr
    className="KambiWidget-header mobile-row"
  >
    <th
      className="title"
      colSpan="2"
    >
      Test title
    </th>
    <th
      className="column-picker"
      colSpan={2}
    />
    <th
      className="margin"
    />
  </tr>
  <tr
    className="KambiWidget-header general"
  >
    <th
      className="title"
      colSpan="2"
    >
      
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 1-1\\""
    >
      c11
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 1-2\\""
    >
      c12
    </th>
    <th
      className="margin"
    />
  </tr>
</thead>
`;

exports[`TableHeadMobile DOM rendering renders correctly when not collapsable 1`] = `
<thead
  onClick={[Function]}
>
  <tr
    className="KambiWidget-header mobile-row"
  >
    <th
      className="title"
      colSpan="2"
    >
      Test title
    </th>
    <th
      className="column-picker"
      colSpan={2}
    >
      <div
        className="general"
      >
        <button
          className="KambiWidget-card-support-text-color button"
          onClick={[Function]}
        >
          Translated: "Column group 1"
          <i />
        </button>
      </div>
    </th>
    <th
      className="margin"
    />
  </tr>
  <tr
    className="KambiWidget-header general"
  >
    <th
      className="title"
      colSpan="2"
    >
      
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 1-1\\""
    >
      c11
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 1-2\\""
    >
      c12
    </th>
    <th
      className="margin"
    />
  </tr>
</thead>
`;

exports[`TableHeadMobile DOM rendering renders correctly with initial column group specified 1`] = `
<thead
  onClick={[Function]}
>
  <tr
    className="KambiWidget-header mobile-row"
  >
    <th
      className="title"
      colSpan="2"
    >
      Test title
    </th>
    <th
      className="column-picker"
      colSpan={2}
    >
      <div
        className="general"
      >
        <button
          className="KambiWidget-card-support-text-color button"
          onClick={[Function]}
        >
          Translated: "Column group 2"
          <i />
        </button>
      </div>
    </th>
    <th
      className="margin"
    />
  </tr>
  <tr
    className="KambiWidget-header general"
  >
    <th
      className="title"
      colSpan="2"
    >
      
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 2-1\\""
    >
      c21
    </th>
    <th
      className="column-name"
      title="Translated: \\"Column 2-2\\""
    >
      c22
    </th>
    <th
      className="margin"
    />
  </tr>
</thead>
`;
